--- a/src/Dockerfile-gcc-11.3
+++ b/src/Dockerfile-gcc-11.3
@@ -2,13 +2,13 @@ FROM debian:bookworm-slim
 
 ENV ARM_GCC_PATH=/opt/gcc-arm-none-eabi
 
-LABEL Description="Image for building and debugging arm-embedded projects using the GCC ARM toolchain (gcc-arm-none-eabi-11.3-rel1). Includes CMake 3.25 and Pyton 3.11"
+LABEL Description="Image for building and debugging arm-embedded projects using the GCC ARM toolchain (gcc-arm-none-eabi-11.3-rel1). Includes CMake 3.25 and Pyton 3.10 (debian bookworm default)"
 LABEL maintainer="Rob McKay"
 
 # wget is needed to get the toolchain
 
 RUN apt-get update && \
-    apt-get install -qq -y ninja-build wget bzip2 xz-utils binutils binutils-common make libpath-tiny-perl python3.11 python3-pip\
+    apt-get install -qq -y ninja-build wget bzip2 xz-utils binutils binutils-common make libpath-tiny-perl python3 python3-pip\
         gcc- cpp- manpages- linux-libc-dev- manpages-dev- --no-install-recommends && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
