--- a/src/Dockerfile-gcc-12.2
+++ b/src/Dockerfile-gcc-12.2
@@ -2,17 +2,16 @@ FROM debian:bookworm-slim
 
 ENV ARM_GCC_PATH=/opt/gcc-arm-none-eabi
 
-LABEL Description="Image for building and debugging arm-embedded projects using the GCC ARM toolchain (gcc-arm-none-eabi-12.2-rel1). Includes CMake 3.25 and Pyton 3.10 (debian bookworm default)"
+LABEL Description="Image for building and debugging arm-embedded projects using the GCC ARM toolchain (gcc-arm-none-eabi-12.2-rel1). Includes CMake 3.25 and Pyton 3.11 (debian bookworm default)"
 LABEL maintainer="Rob McKay"
 
 # wget is needed to get the toolchain
 
 RUN apt-get update && \
-    apt-get install -qq -y ninja-build wget bzip2 xz-utils binutils binutils-common make libpath-tiny-perl python3 python3-pip\
+    apt-get install -qq -y ninja-build wget bzip2 xz-utils binutils binutils-common make libpath-tiny-perl python3 python3-pip pylint3\
         gcc- cpp- manpages- linux-libc-dev- manpages-dev- --no-install-recommends && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-RUN apt install python3-pylint
 # RUN pip3 install pylint
 RUN cpan -i Digest::CRC
 
