--- a/src/Dockerfile-gcc-12.2
+++ b/src/Dockerfile-gcc-12.2
@@ -1,5 +1,7 @@
 FROM debian:bookworm-slim
 
+ARG CMAKE_VER=3.25.2
+
 ENV ARM_GCC_PATH=/opt/gcc-arm-none-eabi
 
 LABEL Description="Image for building and debugging arm-embedded projects using the GCC ARM toolchain (gcc-arm-none-eabi-12.2-rel1). Includes CMake 3.25 and Python 3.11 (debian bookworm default) with pylint and pyserial"
@@ -17,7 +19,7 @@ RUN cpan -i Digest::CRC
 
 WORKDIR /opt
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-RUN wget https://github.com/Kitware/CMake/releases/download/v3.25.2/cmake-3.25.2-linux-x86_64.sh -O cmake-linux-x86_64.sh -q --no-check-certificate && \
+RUN wget https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER}/cmake-${CMAKE_VER}-linux-x86_64.sh -O cmake-linux-x86_64.sh -q --no-check-certificate && \
     chmod +x cmake-linux-x86_64.sh && \
     ./cmake-linux-x86_64.sh  --prefix=/opt --include-subdir --skip-licence && \
     rm cmake-linux-x86_64.sh
@@ -30,5 +32,5 @@ RUN wget https://developer.arm.com/-/media/Files/downloads/gnu/12.2.rel1/binrel/
     rm -rf $ARM_GCC_PATH/share/doc/ $ARM_GCC_PATH/share/gcc-arm-none-eabi/samples/
     
 # add the tools to the path
-ENV PATH="/opt/cmake-3.25.2-linux-x86_64/bin:$ARM_GCC_PATH/bin:${PATH}"
+ENV PATH="/opt/cmake-${CMAKE_VER}-linux-x86_64/bin:$ARM_GCC_PATH/bin:${PATH}"
 WORKDIR /home/build
