--- a/src/Dockerfile-gcc-11.3
+++ b/src/Dockerfile-gcc-11.3
@@ -8,11 +8,11 @@ LABEL maintainer="Rob McKay"
 # wget is needed to get the toolchain
 
 RUN apt-get update && \
-    apt-get install -qq -y ninja-build wget bzip2 xz-utils binutils binutils-common make libpath-tiny-perl python3 python3-pip\
+    apt-get install -qq -y ninja-build wget bzip2 xz-utils binutils binutils-common make libpath-tiny-perl python3 python3-pip pylint\
         gcc- cpp- manpages- linux-libc-dev- manpages-dev- --no-install-recommends && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-RUN pip3 install pylint
+RUN pip3 install --break-system-packages pyserial
 RUN cpan -i Digest::CRC
 
 WORKDIR /opt
